2020-11-17  Tim Horton  <timothy_horton@apple.com>

        REGRESSION (r269824): YouTube media control bar sometimes flickers
        https://bugs.webkit.org/show_bug.cgi?id=219017
        <rdar://problem/71454799>

        Reviewed by Simon Fraser.

        Test: compositing/repaint/transparent-layer-repaint.html

        * Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
        (WebKit::RemoteLayerBackingStore::display):
        I accidentally lost the Copy composite operator in r269824, causing
        the repaint copy-forward to blend instead of just copying.
        This wreaks havoc on layers with contents with colors that have 0 < alpha < 1,
        because every repaint means the colors intensify.

2020-11-16  Brent Fulgham  <bfulgham@apple.com>

        [macOS] Remove access to the unused AppleIntelMEUserClient IOKit class
        https://bugs.webkit.org/show_bug.cgi?id=219012
        <rdar://problem/70462796>

        Reviewed by Eric Carlson.

        Although we originally thought this was needed for H.264 decoding, testing shows that
        this class is never used in WebKit flows, and is not needed. We should remove it.

        * GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:
        * WebProcess/com.apple.WebProcess.sb.in:

2020-11-16  Per Arne Vollan  <pvollan@apple.com>

        [macOS] Create sandbox extension for the power log service on internal installs
        https://bugs.webkit.org/show_bug.cgi?id=218984
        <rdar://problem/58488936>

        Reviewed by Brent Fulgham.

        Create a sandbox extension for the WebContent process for the power log service on macOS internal installs.

        * UIProcess/Cocoa/WebProcessPoolCocoa.mm:
        (WebKit::diagnosticServices):
        * WebProcess/com.apple.WebProcess.sb.in:

2020-11-16  Sam Weinig  <weinig@apple.com>

        Standardize enums that are used by Settings in preperation for autogeneration
        https://bugs.webkit.org/show_bug.cgi?id=218960
