@@ -47,13 +47,11 @@ SOFT_LINK_CLASS(MediaPlayer, MPAVRoutingController)
 SOFT_LINK_CLASS(MediaPlayer, MPAudioVideoRoutingPopoverController)
 SOFT_LINK_CLASS(MediaPlayer, MPAVRoutingSheet)
 
-using namespace WebKit;
-
 @implementation WKAirPlayRoutePicker {
     RetainPtr<MPAVRoutingController> _routingController;
     RetainPtr<MPAudioVideoRoutingPopoverController> _popoverController;  // iPad
     RetainPtr<MPAVRoutingSheet> _actionSheet; // iPhone
-    WKContentView* _view; // Weak reference.
+    WKContentView *_view;
 }
 
 - (instancetype)initWithView:(WKContentView *)view
@@ -154,7 +152,7 @@ ALLOW_DEPRECATED_IMPLEMENTATIONS_END
     [_routingController setDiscoveryMode:MPRouteDiscoveryModeDetailed];
 
     MPAVItemType itemType = hasVideo ? MPAVItemTypeVideo : MPAVItemTypeAudio;
-    if (currentUserInterfaceIdiomIsPadOrMac())
+    if (WebKit::currentUserInterfaceIdiomIsPadOrMac())
         [self showAirPlayPickerIPad:itemType fromRect:elementRect];
     else
         [self showAirPlayPickerIPhone:itemType];
